# problem-solving

./: gitignore
Backtracking/: 10971.java  14888.cpp  14889.cpp  2239.java  9663.cpp  CMakeLists.txt  prog250104.cpp  swea1806.cpp  swea18799.cpp  swea2817.cpp
Binary Search/: 1477.cpp  14921.cpp  1654.cpp  18869.java  19637(lower_bound).cpp  2110.cpp  2295.cpp  3151.cpp  6209.java
Brute Force/: 14500.cpp  14620.cpp  17471.java  1941.java  6221.java  CMakeLists.txt  swea1959.cpp  swea1974.cpp  swea2383.java
DFS&BFS/: 1012.cpp  11724.cpp  13023.java  15971.cpp  1600.java  16236.java  1926-1.cpp  1926.cpp  2234.cpp  2606.cpp  2636.java  3055.java  4179.cpp  7576.cpp  8061.cpp  9205.cpp  CMakeLists.txt  hkr_EvenTree.cpp  hkr_RoadsAndLibraries.cpp  hkr_snakes_and_ladders.cpp  prog1829.cpp  prog네트워크.cpp  prog단어변환.cpp  swea1238.java  swea1244.cpp  swea1767.java  swea5643.java
DP/: 10476.java  10844.cpp  11053.cpp  11659.cpp  11727.cpp  1309.cpp  1351.cpp  1446.cpp  14567.cpp  1463.cpp  1577.java  15989.cpp  17070.java  1890.cpp  1912.cpp  1965.cpp  2193.cpp  2225.cpp  2229.cpp  2229.java  (+23 more)
Greedy/: .gitignore  11000.java  1132.cpp  11501.cpp  12904.cpp  1439.cpp  1459.cpp  1541.cpp  1543.cpp  17609.cpp  17615.java  1802.cpp  1911.cpp  1931.cpp  2012.cpp  2138-ing.cpp  2138.cpp  2141.java  2170.cpp  2195.cpp  2212.cpp  2217.cpp  23559.cpp  2457.java  2785.cpp  2847.cpp  2885.cpp  2891.cpp  3109.java  CMakeLists.txt
Implementation/: .gitignore  1138.cpp  14499.cpp  14719.cpp  1475.cpp  14890.cpp  15683.cpp  15686.cpp  16234.cpp  17114.cpp  17140.cpp  20055.cpp  20056.cpp  20057.cpp  20058.cpp  21608.cpp  21610.cpp  23288.cpp  5430.cpp  CMakeLists.txt  swea1206.cpp  swea4013.java  swea5644.java  swea5656.java
not classified/: 10026.cpp  1005-ing.cpp  10844-ing.cpp  1260.cpp  13335.cpp  14502.cpp  2178.cpp  2667.cpp  5525-ing.cpp  9742.cpp  ALG_sorting.cpp  CMakeLists.txt  test.cpp
(+108 files in other folders)
