cmake_minimum_required(VERSION 3.20)
project(Greedy)

set(CMAKE_CXX_STANDARD 14)

add_executable(Greedy
        #1132.cpp
        #2785.cpp
        #2885.cpp
        #2012.cpp
        #1543.cpp
        #1911.cpp
        #1459.cpp
        #1931.cpp
        #23559.cpp
        #11501.cpp
        2891.cpp
        )
