cmake_minimum_required(VERSION 3.20)
project(Implementation)

set(CMAKE_CXX_STANDARD 14)

add_executable(Implementation
        #1475.cpp
        #15686.cpp
        #5430.cpp
        #21610.cpp
        #21608.cpp
        #16234.cpp
        #14499.cpp
        #17114.cpp
        #15683.cpp
        #20056.cpp
        #17140.cpp
        #20055.cpp
        #14890.cpp
        #swea1206.cpp
        #20057.cpp
        #23288.cpp
        #20058.cpp
        1138.cpp
        )
