cmake_minimum_required(VERSION 3.20)
project(not_classified)

set(CMAKE_CXX_STANDARD 14)

add_executable(not_classified
        #5525-ing.cpp
        #1005-ing.cpp
        #ALG_sorting.cpp
        test.cpp
        #10844-ing.cpp
        #2447.cpp
        #13335.cpp
        #1260.cpp
        #2178.cpp
        #9742.cpp
        #2667.cpp
        #14502.cpp
        #10026.cpp
        )
